# compile-time-verbal-expressions

./: .clang-format  CMakeLists.txt  README.md  rebuild-single-header.sh
compile-time-verbal-expressions/include/: ctve.hpp
examples/: utf8-validation.hpp
include/: ctve.hpp
include/ctve/: character_type.hpp  function_builder.hpp  pattern.hpp  range.hpp  regex_utility.hpp  static_string.hpp
single-header/: ctve.hpp
tests/: CMakeLists.txt  binary_value_matching.cpp  examples-utf8-validation.cpp  matching.cpp  static_string-tests.cpp
